preload sound, no select, no context, adv types, fix animate z-index

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,17 @@ body{
   --cellSize: 30px;
   background-color: #000;
   color: #fff;
+  user-select: none;
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 .row{
